Fix environment variables

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,6 +23,9 @@ env:
   ES_PUBLIC_API_KEY: ${{ secrets.ES_PUBLIC_API_KEY }}
   ES_COURSE_SEARCH_ENDPOINT: ${{ secrets.ES_COURSE_SEARCH_ENDPOINT }}
   ES_INSTRUCTOR_SEARCH_ENDPOINT: ${{ secrets.ES_INSTRUCTOR_SEARCH_ENDPOINT }}
+  ES_COURSE_DOCUMENTS_ENDPOINT: ${{ secrets.ES_COURSE_DOCUMENTS_ENDPOINT }}
+  ES_INSTRUCTOR_DOCUMENTS_ENDPOINT: ${{ secrets.ES_INSTRUCTOR_DOCUMENTS_ENDPOINT }}
+  ES_PRIVATE_API_KEY: ${{ secrets.ES_PRIVATE_API_KEY }}
   # discord
   DISCORD_URL_BUG: ${{ secrets.DISCORD_URL_BUG }}
   DISCORD_URL_FEEDBACK: ${{ secrets.DISCORD_URL_FEEDBACK }}
