Suppress UserWarning: Error reading .../.env - if you're not configuring your environment separately, check this.

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           mkdir tcf_website/migrations
           touch tcf_website/migrations/__init__.py
+          envsubst < .env.example > .env
           python manage.py makemigrations
           python manage.py migrate
           python manage.py test
