--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -31,7 +31,28 @@ env:
   DISCORD_URL_FEEDBACK: ${{ secrets.DISCORD_URL_FEEDBACK }}
 
 jobs:
-  build:
+  pylint:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.8]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install pylint
+        run: |
+          python -m pip install --upgrade pip
+          pip install pylint
+
+      - name: Run pylint
+        run: pylint --load-plugins pylint_django tcf_website tcf_core
+  django:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -61,11 +82,8 @@ jobs:
       - name: Install Python packages, excluding the unnecessary ones
         run: |
           python -m pip install --upgrade pip
-          for x in "tqdm" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
+          for x in tqdm" "lint" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
           pip install -r requirements.txt
-
-      - name: Run pylint
-        run: pylint --load-plugins pylint_django tcf_website tcf_core
 
       - name: Migrations & Tests
         run: |
@@ -75,6 +93,10 @@ jobs:
           python manage.py makemigrations
           python manage.py migrate
           python manage.py test
+  eslint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
       - name: Install Node
         uses: actions/setup-node@v1
