--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
+          pip install pylint_django
 
       - name: Run pylint
         run: pylint --load-plugins pylint_django tcf_website tcf_core
@@ -82,7 +82,7 @@ jobs:
       - name: Install Python packages, excluding the unnecessary ones
         run: |
           python -m pip install --upgrade pip
-          for x in tqdm" "lint" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
+          for x in "tqdm" "lint" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
           pip install -r requirements.txt
 
       - name: Migrations & Tests
