--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
-          pip install pylint_django
+          pip install -r requirements.txt
 
       - name: Run pylint
         run: pylint --load-plugins pylint_django tcf_website tcf_core
@@ -79,10 +79,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Python packages, excluding the unnecessary ones
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
-          for x in "tqdm" "lint" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
           pip install -r requirements.txt
 
       - name: Migrations & Tests
