--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
+          for x in "tqdm" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
           pip install -r requirements.txt
 
       - name: Run pylint
@@ -82,6 +83,7 @@ jobs:
       - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
+          for x in "tqdm" "lint" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
           pip install -r requirements.txt
 
       - name: Migrations & Tests
