--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -48,8 +48,7 @@ jobs:
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
-          for x in "tqdm" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
-          pip install -r requirements.txt
+          egrep "Django|pylint" requirements.txt | pip install
 
       - name: Run pylint
         run: pylint --load-plugins pylint_django tcf_website tcf_core
@@ -80,11 +79,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install Python packages
+      - name: Install Python packages, excluding the unnecessary ones
         run: |
           python -m pip install --upgrade pip
-          for x in "tqdm" "lint" "gunicorn" "django-heroku" "uwsgi"; do sed -i "/$x/d" requirements.txt; done;
-          pip install -r requirements.txt
+          sed '/\(tqdm\|lint\|gunicorn\|django-heroku\|uwsgi\)/d' requirements.txt | pip install
 
       - name: Migrations & Tests
         run: |
