Replace pipe operator with command substitution

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install pylint
         run: |
           python -m pip install --upgrade pip
-          egrep "Django|pylint" requirements.txt | pip install
+          pip install $(egrep "Django|pylint" requirements.txt)
 
       - name: Run pylint
         run: pylint --load-plugins pylint_django tcf_website tcf_core
@@ -75,7 +75,7 @@ jobs:
       - name: Install Python packages, excluding the unnecessary ones
         run: |
           python -m pip install --upgrade pip
-          sed '/\(tqdm\|lint\|gunicorn\|django-heroku\|uwsgi\)/d' requirements.txt | pip install
+          pip install $(sed '/\(tqdm\|lint\|gunicorn\|django-heroku\|uwsgi\)/d' requirements.txt)
 
       - name: Migrations & Tests
         run: |
