--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -120,6 +120,9 @@ jobs:
       - name: Run ESLint
         run: node_modules/.bin/eslint tcf_website/static/**/*.js
 
+      - name: Fail intentionally to see if GitHub Actions Bot works
+        run: exit 1
+
       - name: Notify that eslint failed
         if: ${{ failure() }}
         run: |
@@ -130,12 +133,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send a message to tCF Discord Server when triggered by a pull request
-        if: ${{ github.event.name == 'pull_request' }}
+        if: ${{ github.event_name == 'pull_request' }}
         run: |
           echo "PR #${{ github.pull_request.number}} \"${{ github.pull_request.title }}\"($GITHUB_HEAD_REF -> $GITHUB_BASE_REF): All jobs completed successfully!"
           curl -X POST -H "Content-Type: application/json" --data "{ \"content\": \"PR #${{ github.pull_request.number}} \"${{ github.pull_request.title }}\"($GITHUB_HEAD_REF -> $GITHUB_BASE_REF): All jobs completed successfully!\" }" ${{ secrets.DISCORD_URL_CI }}/github
 
       - name: Send a message to tCF Discord Server when triggered by a push
-        if: ${{ github.event.name == 'push' }}
+        if: ${{ github.event_name == 'push' }}
         run: |
           curl -X POST -H "Content-Type: application/json" --data "{ \"content\": \"Push to All jobs completed successfully!\" }" ${{ secrets.DISCORD_URL_CI }}/github
