Add env vars to app.yaml.template

--- a/app.yaml.template
+++ b/app.yaml.template
@@ -37,3 +37,5 @@ env_variables:
     ES_PUBLIC_API_KEY: "${ES_PUBLIC_API_KEY}"
     DISCORD_URL_BUG: "${DISCORD_URL_BUG}"
     DISCORD_URL_FEEDBACK: "${DISCORD_URL_FEEDBACK}"
+    SOCIAL_AUTH_GOOGLE_OAUTH2_KEY: "${SOCIAL_AUTH_GOOGLE_OAUTH2_KEY}"
+    SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET: "${SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET}"
