--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -123,5 +123,6 @@ jobs:
           PR_NUMBER: ${{ github.pull_request.number}}
           PR_TITLE: ${{ github.pull_request.title }}
         run: |
-          ./scripts/notify-discord.sh
+          chmod +x ./scripts/notify-discord.sh
+          bash ./scripts/notify-discord.sh
         shell: bash
