--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -41,6 +41,7 @@ jobs:
   pylint:
     runs-on: ubuntu-latest
     steps:
+      - run: exit 1
       - uses: actions/checkout@v2
 
       - name: Set up Python ${{ env.PYTHON_TARGET }}
@@ -71,6 +72,7 @@ jobs:
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
+      - run: exit 1
       - uses: actions/checkout@v2
 
       - name: Set up Python ${{ env.PYTHON_TARGET }}
@@ -96,6 +98,7 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
+      - run: exit 1
       - uses: actions/checkout@v2
 
       - name: Install Node
