Send a discord notification even if everything fails

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -113,6 +113,7 @@ jobs:
         run: node_modules/.bin/eslint tcf_website/static/**/*.js
 
   discord:
+    if: always()
     needs: [pylint, django, eslint]
     runs-on: ubuntu-latest
     steps:
