--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -125,7 +125,7 @@ jobs:
           DJANGO_RESULT: ${{ needs.django.result }}
           ESLINT_RESULT: ${{ needs.eslint.result }}
           PR_NUMBER: ${{ github.event.number}}
-          PR_TITLE: ${{ github.event.title }}
+          PR_TITLE: ${{ github.event.pull_request.title }}
         run: |
           chmod +x ./scripts/notify-discord.sh
           ./scripts/notify-discord.sh
