--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thecourseforum",
   "version": "2.0.0",
-  "description": "[![Build Status](https://travis-ci.com/thecourseforum/theCourseForum2.svg?branch=master)](https://travis-ci.com/thecourseforum/theCourseForum2)",
+  "description": "[![Build Status](https://github.com/thecourseforum/theCourseForum2/workflows/Continuous%20Integration/badge.svg?branch=master)](https://github.com/thecourseforum/theCourseForum2/actions?query=workflow%3A%22Continuous+Integration%22+branch%3Amaster)",
   "main": "index.js",
   "dependencies": {
     "chart.js": "^2.9.4",
