Add issue templates and move some files to .config/ or docs/ (PR #343: Docs)
* Update issue templates
* Move and improve PR template
* Move documents to docs/
* Move app.yaml.template to .config/
* Move .env.travis to .config/
* Move .eslintrc.yml to .config/
* Move .env.example to .config/
* Explain what squash-merge means
* Take out unused fields
* Replace boldfaced headers with ##
* Update bug-report.md

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -75,4 +75,4 @@ jobs:
         run: npm ci
 
       - name: Run ESLint
-        run: node_modules/.bin/eslint tcf_website/static/**/*.js
+        run: node_modules/.bin/eslint tcf_website/static/**/*.js -c .config/.eslintrc.yml
