--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           mkdir tcf_website/migrations
           touch tcf_website/migrations/__init__.py
-          envsubst < .env.example > .env
+          envsubst < .config/.env.example > .env
           python manage.py makemigrations
           python manage.py migrate
           python manage.py test
