--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -59,6 +59,8 @@ jobs:
 
   django:
     runs-on: ubuntu-latest
+    outputs:
+      code-coverage: ${{ steps.coverage.outputs.percentage }}
     services:
       postgres:
         image: postgres:12.2
@@ -82,6 +84,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           sed -i '/\(pandas\|tqdm\|lint\|autopep8\|gunicorn\|django\-heroku\|uwsgi\)/d' requirements.txt
+          echo coverage >> requirements.txt
           pip install -r requirements.txt
 
       - name: Migrations & Tests
@@ -91,7 +94,14 @@ jobs:
           envsubst < .config/.env.example > .env
           python manage.py makemigrations
           python manage.py migrate
-          python manage.py test
+          coverage run manage.py test
+        continue-on-error: true
+
+      - name: Get code coverage
+        if: ${{ success() }}
+        id: coverage
+        run: |
+          echo "::set-output name=percentage::$(coverage report | grep -o '[0-9]\+%' | tail -1)"
 
   eslint:
     runs-on: ubuntu-latest
@@ -123,6 +133,7 @@ jobs:
           ESLINT_RESULT: ${{ needs.eslint.result }}
           PR_NUMBER: ${{ github.event.number}}
           PR_TITLE: ${{ github.event.pull_request.title }}
+          DJANGO_COVERAGE: ${{ needs.django.outputs.code-coverage }}
         run: |
           chmod +x ./scripts/notify-discord.sh
           ./scripts/notify-discord.sh
