Change suffix to infix in .config/app.yaml.template
This will allow IDEs to recognize the file type and color code the file.

--- a/.github/workflows/master-to-app-engine.yml
+++ b/.github/workflows/master-to-app-engine.yml
@@ -69,7 +69,7 @@ jobs:
         run: python3 manage.py collectstatic --noinput --clear
 
       - name: Substitute environment variables
-        run: envsubst < .config/app.yaml.template > app.yaml
+        run: envsubst < .config/app.template.yaml > app.yaml
 
       - name: Deploy to Google App Engine
         uses: google-github-actions/deploy-appengine@main
